tests/sema/fail/v16_fail_null_check_bool.ep
# COMPILE_FAIL_CONTAINS: null check expected reference, got bool
struct Foo {
    b: bool
}
fun main(): void {
    let foo = new Foo { b: true }
    if foo.b? {
    }
}
